# CtoRustMigration

./: .gitignore  ARRAY_OPTIMIZATION_COMPLETION_REPORT.md  ARRAY_OPTIMIZATION_SUMMARY.md  LOOM_CONVERTER_REFACTOR_SUMMARY.md  SEARCH_RESULTS.md  compare_metric.md  run_all_examples.sh  update-toolchain.sh  verify_examples.sh
LLM/: .last_refactor_output  CLEANUP_GUIDE.md  CONVERTER_FIX_SUMMARY.md  EVALUATION_WORKFLOW.md  EVAL_INTEGRATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  ITERATIVE_LOOP_GUIDE.md  LOOM_CONVERTER_INTEGRATION.md  LOOM_SETUP.md  LOOM_VALIDATOR_FIX.md  MIRI_EVALUATION.md  NEGATIVE_SAMPLES_AND_PROMPT_CONFIG.md  QUICK_START_NEGATIVE_SAMPLES.md  README.md  RUN_SCRIPT_GUIDE.md  cleanup.py  demo_iterative_loop.sh  output_manager.py  quick-ref.sh  refractor.py  run.sh  run_evaluation.sh  run_loom_eval.sh  run_miri_eval.sh  test_loom_converter.py  test_output_structure.sh  test_system.py  validator.py
LLM/evaluation/: clippy_concurrency_eval.py  compare_all.py  generate_comparison.py  loom_eval.py  miri_eval.py
LLM/loom_converter/: README.md  __init__.py  __main__.py  cli.py  converter.py  functions.py  primitives.py  state_gen.py  statics.py  utils.py
LLM/refraction/: README.md  __init__.py  code_rewriter.py  main.py  (+4 more)
LLM/validation/global_assume/: Cargo.toml  final.rs  main.c2rust.rs  main.concrat.rs  main.rs
LLM/validation/global_assume/tests/: loom.rs
scripts/: regenerate_examples_c2rust.sh  regenerate_negative_examples.sh  test_dir.sh  test_examples.sh  test_negative_examples.sh
src/: rewrite.rs
(+424 files in other folders)
