[workspace]
members = [
]
[package]
name = "c2rust_out"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2021"
autobins = false

[lib]
name = "c2rust_out"
path = "c2rust-lib.rs"
crate-type = ["staticlib", "rlib"]
[dependencies]
libc = "0.2"
lazy_static = "1.4"
once_cell = "1.18"
[target.'cfg(loom)'.dependencies]
loom = "0.7"